--- a/main.css
+++ b/main.css
@@ -16,6 +16,16 @@ html {
 }
 
 :root {
+    --border-radius: 0.5em;
+    --border-radiusXS: 0.25em;
+
+    --border-radiusS: 0.5em;
+    --border-radiusM: 1em;
+    --border-radiusL: 1.25em;
+
+
+
+
     --height100: 100%;
 
     --img-APPOINT: url('./image/Cover_APPOINTA.jpg');
@@ -104,7 +114,9 @@ html {
     --toasttab: #FF4C00;
     --GardenersHub: #4C665B;
 
-    --border-radius: 0.5em;
+
+
+
     font-family: 'Lato', sans-serif;
     --GLORIFY-orangeBgLt: #EDDACC;
     --GLORIFY-orange: #EFBD66;
@@ -116,6 +128,35 @@ html {
     --GlorifyGreen: #79C25A;
 
 
+}
+
+.Testing {
+    transition: background-color 0.3s ease;
+    border-radius: 6px;
+    height: 6em;
+    background: var(--Warm);
+    transition: background-color 0.3s ease;
+}
+.borderRadiusXS {
+    border-radius: var(--border-radiusXS);
+}
+
+.borderRadiusM {
+    border-radius: var(--border-radiusM);
+
+}
+
+.borderRadiusS {
+    border-radius: var(--border-radiusS);
+}
+
+.borderRadiusM {
+    border-radius: var(--border-radiusM);
+
+}
+
+.borderRadiusL {
+    border-radius: var(--border-radiusL);
 }
 
 /* width */
@@ -238,6 +279,11 @@ body {
 
 .WhiteBgTrans {
     background-color: var(--White-transparent);
+}
+
+.WarmBg {
+    background-color: var(--Warm);
+
 }
 
 /* ===== bg color grey ===== */
@@ -565,10 +611,15 @@ polygon {
     box-shadow: rgba(139, 139, 139, 0.45) 0px 25px 20px -20px;
 }
 
+.shadowBox:hover {
+    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
+}
+
 .shadowBoxLt {
     box-shadow: rgba(176, 178, 179, 0.2) -4px 9px 25px -6px;
 
 }
+
 
 .shadowFilter {
     filter: drop-shadow(3px 2px 2px rgba(143, 143, 143, 0.404));
@@ -3884,9 +3935,6 @@ body .flex-container.Mobile {
     border: 1px solid #4C665B;
 }
 
-.shadowBox:hover {
-    box-shadow: 0 12px 20px 0 rgba(0, 0, 0, 0.096), 0 36px 68px 0 rgba(0, 0, 0, 0.075);
-}
 
 /* hover */
 
@@ -4704,6 +4752,36 @@ footer {
 
 .iconL {
     width: 8rem;
+}
+
+.spacing1 {
+    width: 0.5em;
+    height: 0.5em;
+}
+
+.spacing2 {
+    width: 1em;
+    height: 1em;
+}
+
+.spacing3 {
+    width: 1.5em;
+    height: 1.5em;
+}
+
+.spacing4 {
+    width: 2em;
+    height: 2em;
+}
+
+.spacing5 {
+    width: 2.5em;
+    height: 2.5em;
+}
+
+.spacing6 {
+    width: 3em;
+    height: 3em;
 }
 
 /* ======== width & height V2 New ========= */
