--- a/main.css
+++ b/main.css
@@ -1882,20 +1882,24 @@ section .padding {
 .noMargin {
     margin: 0 !important;
 }
+.fontWeight100 {
+    font-weight: 100;
 
+}
 .fontWeight300 {
     font-weight: 300;
 
 }
 
-.fontWeight500 {
-    font-weight: 500;
-
+.fontWeight400 {
+    font-weight: 400;
 }
-
+.fontWeight700 {
+    font-weight: 700;
+}
 h1,
 h2 {
-    font-weight: 500;
+    font-weight: 400;
 
 }
 
@@ -1980,7 +1984,7 @@ p.thick {
 
 strong {
     font-family: 'lato', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     color: var(--Grey900);
     margin: 1em, 0;
 }
@@ -5081,7 +5085,13 @@ a:link.textUnderline {
 
 }
 
+.textUnderline {
+    text-decoration-line: underline;
+    text-decoration-thickness: 0.03em;
+    text-underline-offset: 6px;
+    text-decoration-color: var(--Grey900);
 
+}
 
 
 a:link.textProject {
