--- a/main.css
+++ b/main.css
@@ -775,7 +775,7 @@ polygon {
     position: absolute;
     background-color: var(--white);
     width: 100%;
-    
+
     left: 0;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 98;
@@ -1882,10 +1882,12 @@ section .padding {
 .noMargin {
     margin: 0 !important;
 }
+
 .fontWeight100 {
     font-weight: 100;
 
 }
+
 .fontWeight300 {
     font-weight: 300;
 
@@ -1894,9 +1896,11 @@ section .padding {
 .fontWeight400 {
     font-weight: 400;
 }
+
 .fontWeight700 {
     font-weight: 700;
 }
+
 h1,
 h2 {
     font-weight: 400;
@@ -6262,28 +6266,48 @@ button {
 /* ===== audio ====== */
 
 
-    /* Style the audio container */
-    #audio-container {
-        width: 100px;
-        background-color: violet;
-        padding: 10px;
-        border-radius: 8px;
-        text-align: center;
-      }
-      /* Style the play button */
-      #play-button {
-        width: 50px;
-        height: 50px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 50%;
-        cursor: pointer;
-      }
-      /* Style the time display */
-      #time-display {
-        margin-top: 10px;
-        font-size: 14px;
-        color: #333;
-      }
+/* Style the audio container */
+#audio-container {
+    width: 100px;
+    background-color: violet;
+    padding: 10px;
+    border-radius: 8px;
+    text-align: center;
+}
+
+/* Style the play button */
+#play-button {
+    width: 50px;
+    height: 50px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+/* Style the time display */
+#time-display {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #333;
+}
+
+
+
 /* ===== audio ====== */
+div.relative {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    border: 3px solid #73AD21;
+}
+
+div.absolute {
+    position: absolute;
+    top: 80px;
+    right: 0;
+    width: 200px;
+    height: 100px;
+    border: 3px solid #73AD21;
+}
