--- a/main.css
+++ b/main.css
@@ -6288,7 +6288,7 @@ button {
 
 
 /* Style the audio container */
-#audio-container {
+.audio-container {
     width: 100px;
     background-color: violet;
     padding: 10px;
@@ -6297,7 +6297,7 @@ button {
 }
 
 /* Style the play button */
-#play-button {
+.play-button {
     width: 50px;
     height: 50px;
     background-color: #007bff;
@@ -6308,27 +6308,11 @@ button {
 }
 
 /* Style the time display */
-#time-display {
+.time-display {
     margin-top: 10px;
     font-size: 14px;
     color: #333;
 }
 
 
-
 /* ===== audio ====== */
-div.relative {
-    position: relative;
-    width: 100%;
-    height: 200px;
-    border: 3px solid #73AD21;
-}
-
-div.absolute {
-    position: absolute;
-    top: 80px;
-    right: 0;
-    width: 200px;
-    height: 100px;
-    border: 3px solid #73AD21;
-}
