--- a/main.css
+++ b/main.css
@@ -555,7 +555,7 @@ polygon {
 .cardGlorify {
     background: var(--GLORIFY-orangeLtest);
     border-radius: 0.8em;
-    border: 1px solid var(--border);
+    border: 2px solid var(--GLORIFY-orange);
     height: auto;
 
 
@@ -2186,7 +2186,7 @@ hr {
 padding: 0.8em 0em 0;
 /* ----     padding: 0.8em top 1em right and left 0 bottom; ----*/
 
-    margin-bottom: 1em;
+    margin-bottom: 0.8em;
     transition: background-color 0.3s ease;
 }
 
@@ -3307,7 +3307,7 @@ flex: 0 0 calc(33.3333% - 1em);
 }
 
 .paddingleft{
-    padding-left: 0.4em;
+    padding-left: 0.8em;
 }
 .max-width::before {
     content: "max-width";
@@ -6306,7 +6306,10 @@ button {
     border-radius: 50%;
     cursor: pointer;
 }
-
+.Glorify.play-button{
+    background-color: var(--GLORIFY-orange);
+    color: var(--grey900);
+}
 /* Style the time display */
 .time-display {
     margin-top: 10px;
